--- a/Clases/Clase_1/Tarea 1.ipynb
+++ b/Clases/Clase_1/Tarea 1.ipynb
@@ -11,14 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Dejar los valores desde el 1 al 100 en una lista"
+    "1. Dejar los valores desde el 1 al 100 en una lista"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Pide un número por teclado y guarda en una lista su tabla de multiplicar desde el 1 hasta el 100. \n",
+    "2. Pide un número por teclado y guarda en una lista su tabla de multiplicar desde el 1 hasta el 100. \n",
     "por ejemplo si pide el 2 la lista tendrá:\n",
     "[2,4,6,8,10,12,14,16,18,20]\n",
     "    "
@@ -28,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Pide números y mételos en una lista, hasta 10 números. Por último, muesta los números ordenados de\n",
+    "3. Pide números y mételos en una lista, hasta 10 números. Por último, muesta los números ordenados de\n",
     "mayor a menor."
    ]
   }
