--- a/Clases/Clase_2/Resumen y Clase 2.ipynb
+++ b/Clases/Clase_2/Resumen y Clase 2.ipynb
@@ -1503,11 +1503,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## funciones:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Utilizaremos las funciones para cuando necesitemos realizar algún tipo de cálculo o para generar alguna data con características según los datos que tengamos"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ejemplo:\n",
+    "\n",
+    "* sintaxis:\n",
+    "    def funcion(parámetros):\n",
+    "        Cuerpo de la función"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mi_primera_funcion(x,y):\n",
+    "    return(x+y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mi_primera_funcion(4,5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* También podemos crear funciones sin la necesidad de enviarle parámetros, solo que haga algo interno:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-11-20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Por ejemplo nos gustaría obtener la fecha del día de hoy:\n",
+    "import datetime as dt\n",
+    "def mi_segunda_function():\n",
+    "    return dt.date.today()\n",
+    "\n",
+    "print(mi_segunda_function())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-11-20 14:09:05.519137\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mi_tercera_function():\n",
+    "    return dt.datetime.today()\n",
+    "\n",
+    "print(mi_tercera_function())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Funciones mas cortas: lambda"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "500\n"
+     ]
+    }
+   ],
+   "source": [
+    "funcion_corta = lambda n: (n*100)\n",
+    "print(funcion_corta(5))"
+   ]
   }
  ],
  "metadata": {
